--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -11,7 +11,7 @@
             </li>
         </ul>
         <form class="d-flex ml-auto" role="search" id="ticker-search">
-            <input class="form-control me-2 bg-dark form-outline-info" type="search" placeholder="Ticker" aria-label="Search" style="margin-right: 10px;" id="ticker-search-input">
+            <input class="form-control me-2 form-outline-info" type="search" placeholder="Ticker" aria-label="Search" style="margin-right: 10px;" id="ticker-search-input">
             <button class="btn btn-outline-info" type="submit">Find</button>
         </form>
     </div>
