--- a/views/list_notfound.ejs
+++ b/views/list_notfound.ejs
@@ -4,7 +4,8 @@
 
 <div class="container">
     <br>
-    <h5>Could not find ticker: "<%= ticker %>".</h5>
+    <br>
+    <h4>Could not find <%= list %>.</h4>
 </div>
 
 <%- include('partials/footer')%>
