Refactoring, 404 and error page

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -5,7 +5,7 @@
 <div class="container">
     <br>
     <br>
-    <h4>Could not find <%= list %>.</h4>
+    <h4><%= error %></h4>
 </div>
 
 <%- include('partials/footer')%>
