--- a/views/ticker_lookup.ejs
+++ b/views/ticker_lookup.ejs
@@ -27,9 +27,9 @@
     </p>
     <br>
 
-    <div id="chart-container"></div>  
-    <br>
-    <br>
+    <!-- <div id="chart-container"></div>   -->
+    <!-- <br>
+    <br> -->
     <h4><%= news.length >= 1 ? "News" : "" %></h4>
     <br>
     <% for (let i in news) { %>
